--- a/module2/src/main/resources/webapp/index.html
+++ b/module2/src/main/resources/webapp/index.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>Hello World!</h1>
 
-	<form id="file-form" action="handler.php" method="POST">
+	<form id="file-form" action="original_artifact" method="POST" enctype="multipart/form-data">
 		<input type="file" id="file-select" name="originalArtifact" />
 		<button type="submit" id="upload-button">Upload</button>
 	</form>
@@ -60,48 +60,6 @@
 	</form>
 	
 	<script type="text/javascript" language="javascript">
-		var form = document.getElementById('file-form');
-		var fileSelect = document.getElementById('file-select');
-		var uploadButton = document.getElementById('upload-button');
-		
-		form.onsubmit = function(event) {
-			event.preventDefault();
-			
-			// Update button text.
-			uploadButton.innerHTML = 'Uploading...';
-			
-			// Get the selected files from the input.
-			var files = fileSelect.files;
-			// Create a new FormData object.
-			var formData = new FormData();
-			// Loop through each of the selected files.
-			for (var i = 0; i < files.length; i++) {
-				var file = files[i];
-				// Add the file to the request.
-				formData.append('originalArtifact[]', file, file.name);
-			}
-
-			// Set up the request.
-			var xhr = new XMLHttpRequest();
-			
-			// Open the connection.
-			xhr.open('POST', 'original_artifact', true);
-
-			// Set up a handler for when the request finishes.
-			xhr.onload = function () {
-				if (xhr.status === 200) {
-					// File(s) uploaded.
-					uploadButton.innerHTML = 'Upload';
-					fileSelect.value='';
-				} else {
-					alert('An error occurred!');
-				}
-			};
-
-			// Send the Data.
-			xhr.send(formData);
-		}
-
 		function onBuildTypeChanged(val){
 			var formMaven = document.getElementById('build-form-maven');
 
